--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -2,7 +2,17 @@
   <h2>Tasks</h2>
   <ul>
     <li *ngFor="let task of tasks">
-      {{ task.title }} - {{ task.description }}
+      <div *ngIf="editingId !== task.id">
+        {{ task.title }} - {{ task.description }}
+        <button (click)="deleteTask(task.id)">Delete</button>
+        <button (click)="enableEditing(task)">Edit</button>
+      </div>
+      <form *ngIf="editingId === task.id" (ngSubmit)="updateTask(task.id)">
+        <input type="text" [(ngModel)]="editingTitle" name="title" required>
+        <input type="text" [(ngModel)]="editingDescription" name="description" required>
+        <button type="submit">Save</button>
+        <button type="button" (click)="cancelEditing()">Cancel</button>
+      </form>
     </li>
   </ul>
 </div>
