--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,17 +1,17 @@
 <div>
   <h2>Login</h2>
-  <form (ngSubmit)="login()">
-    <label for="username">Usuário:</label>
-    <input type="text" id="username" [(ngModel)]="username" name="username" required>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <mat-form-field appearance="fill">
+      <mat-label>Usuário</mat-label>
+      <input matInput formControlName="username">
+    </mat-form-field>
 
-    <label for="password">Senha:</label>
-    <input type="password" id="password" [(ngModel)]="password" name="password" required>
+    <mat-form-field appearance="fill">
+      <mat-label>Senha</mat-label>
+      <input matInput type="password" formControlName="password">
+    </mat-form-field>
 
-    <button type="submit">Login</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
-</div>
-
-
-<div *ngIf="error" class="error">
-  {{ error }}
+  <div *ngIf="error" class="error">{{ error }}</div>
 </div>
