--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -2,16 +2,20 @@
   <h2>Tasks</h2>
   <ul>
     <li *ngFor="let task of tasks">
-      <div *ngIf="editingId !== task.id">
+      <div *ngIf="!editingForms[task.id]">
         {{ task.title }} - {{ task.description }}
-        <button (click)="deleteTask(task.id)">Delete</button>
-        <button (click)="enableEditing(task)">Edit</button>
+        <button mat-button (click)="enableEditing(task)">Edit</button>
+        <button mat-button color="warn" (click)="deleteTask(task.id)">Delete</button>
       </div>
-      <form *ngIf="editingId === task.id" (ngSubmit)="updateTask(task.id)">
-        <input type="text" [(ngModel)]="editingTitle" name="title" required>
-        <input type="text" [(ngModel)]="editingDescription" name="description" required>
-        <button type="submit">Save</button>
-        <button type="button" (click)="cancelEditing()">Cancel</button>
+      <form *ngIf="editingForms[task.id]" [formGroup]="editingForms[task.id]" (ngSubmit)="updateTask(task.id)">
+        <mat-form-field>
+          <input matInput placeholder="Title" formControlName="title">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Description" formControlName="description">
+        </mat-form-field>
+        <button mat-button type="submit">Save</button>
+        <button mat-button type="button" (click)="cancelEditing(task.id)">Cancel</button>
       </form>
     </li>
   </ul>
